@@ -229,8 +229,6 @@ Client.prototype.attachResources = function() {
 		if (this._private.debug > 10)
 			console.log("Attach resource", r);
 
-		this.resources.push(r);
-
 		this[r] = new Client.Resource(
 			this,
 			null,
@@ -238,6 +236,8 @@ Client.prototype.attachResources = function() {
 			this._private.description.resources[r],
 			[]
 		);
+
+		this.resources.push(this[r]);
 	}
 };
 
@@ -424,7 +424,7 @@ Client.prototype.createSettings = function() {
  */
 Client.prototype.destroyResources = function() {
 	while (this.resources.length > 0) {
-		delete this[ this.resources.shift() ];
+		delete this[ this.resources.shift().getName() ];
 	}
 };
 
