@@ -1,3 +1,4 @@
+- Client.resources and BaseResource.resources contain objects
 - Client.authenticate: report if authentication has failed
 - Add method Authentication.Token.renewToken
 - Resources are aware of their parents
